<?xml version="1.0" encoding="utf-8" ?><!--

-->
<resources>
    <string name="app_name">マイライブラリ</string>
    <string name="tv_title">タイトル:</string>
    <string name="tv_author">作者:</string>
    <string name="tv_publisher">出版社:</string>
    <string name="tv_genre">ジャンル:</string>
    <string name="tv_category">カテゴリー:</string>
    <string name="rb_cartoon">漫画</string>
    <string name="rb_novel">小説</string>
    <string name="tv_title_edit">本情報編集</string>
    <string name="tv_title_insert">本情報登録</string>
    <!-- コンテキストメニュー -->
    <string name="menu_context_child">本を追加</string>
    <string name="menu_context_parent">本の情報変更</string>
    <string name="menu_context_delete">本を削除</string>
    <string name="update">更新日</string>
    <string name="volume">巻</string>
</resources>