<?xml version="1.0" encoding="utf-8"?>
<!--
ST32 Android課題1 ToDoアプリ作成
メモリスト画面レイアウトファイル

ファイル名=activity_to_do_edit.xml
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/tv_title_edit"
            android:textSize="25sp"/>

    </FrameLayout>
    <!-- タイトル名 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etInputLibraryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>
    <!-- カテゴリー -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/ll_genre_add"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_category"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/rg_novel_cartoon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_novel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:checked="true"
                android:duplicateParentState="false"
                android:text="@string/rb_novel"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_cartoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_cartoon"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>
    <!-- ジャンル -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3"
        android:orientation="horizontal">
        <TableRow>

            <CheckBox
                android:id="@+id/cb_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="音楽"/>
            <CheckBox
                android:id="@+id/cb_academy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="学園"/>
            <CheckBox
                android:id="@+id/cb_comedy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="コメディー"/>
            <CheckBox
                android:id="@+id/cb_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="恋愛・ラブコメ"/>
        </TableRow>
    </TableLayout>
    <!-- 作者 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_author"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etInputAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>
    <!-- 出版社 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_publisher"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etInputPublisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/image_view"
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>
